--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -22,9 +22,12 @@ jobs:
           fetch-depth: 0
 
       - name: Configure Git
+        env:
+          GIT_USER_NAME: ${{ github.actor }}
+          GIT_USER_EMAIL: ${{ github.actor }}@users.noreply.github.com
         run: |
-          git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          git config user.name "$GIT_USER_NAME"
+          git config user.email "$GIT_USER_EMAIL"
 
       - name: Install Helm
         uses: azure/setup-helm@v3
@@ -72,8 +75,6 @@ jobs:
           helm repo index gh-pages --url https://we-promise.github.io/sure --merge gh-pages/index.yaml
 
           # Push to gh-pages
-          git config --global user.email "sure-admin@sure.am"
-          git config --global user.name "sure-admin"
           git config --global credential.helper cache
           cd gh-pages
           git add .
